--- a/DataCleaning.Rmd
+++ b/DataCleaning.Rmd
@@ -131,9 +131,9 @@ heyya <- for (i in 1:dim(SigTor.sfdf)[1]) {
         }
     timezone <- append(timezone, TZAbbr)
     
-    ZuluTime <- if (!is.na(SigTor.sfdf$dst[i] == TRUE)){
+    ZuluTime <- if (SigTor.sfdf$dst[i] == TRUE){
       (SigTor.sfdf$local_DateTime[i] - (3600 * bonjour[2,4])) 
-      } else if (!is.na(SigTor.sfdf$dst[i] == FALSE)) {
+      } else if (SigTor.sfdf$dst[i] == FALSE) {
       (SigTor.sfdf$local_DateTime[i] - (3600 * bonjour[1,4]))
       } else {
       NA
@@ -149,13 +149,13 @@ SigTor.sfdf <- cbind(SigTor.sfdf, as.data.frame(timezone), as.data.frame(Zulu_Da
 SigTor.sfdf$Zulu_DateTime <- as.POSIXct(SigTor.sfdf$Zulu_DateTime, format = "%Y-%m-%d %H:%M:%S", tz = "UTC")
 ```
 
-```{r, eval = FALSE}
+```{r}
 SigTor.sfdf <- SigTor.sfdf %>%
   mutate(Time_CST = Zulu_DateTime - 3600 * 6)
 ```
 
 
-```{r, eval = FALSE}
+```{r}
 SigTor.sfdf$Zulu_DateTime <- force_tz(SigTor.sfdf$Zulu_DateTime, tzone = "UTC")
 NARRtime <- align.time(SigTor.sfdf$Zulu_DateTime, n = (60 * 60 * 3)) - 3600 * 3 ###Had to remove the -3600*3
 NARRday = format(as.POSIXct(strptime(NARRtime,"%Y-%m-%d %H:%M:%S",tz="")) ,format = "%Y/%m/%d")
@@ -164,7 +164,7 @@ NARRZtime = format(as.POSIXct(strptime(NARRtime,"%Y-%m-%d %H:%M:%S",tz="")) ,for
 SigTor.sfdf <- cbind(SigTor.sfdf, NARRday, NARRZtime)
 ```
 
-```{r, eval = FALSE}
+```{r}
 #Tornado Start Points
 #save(SigTor.sfdf, file = "HistoricalTornadoes.RData")
 
